# ai-counselling-report

./: .env  .gitignore  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_create_audio_files.py  0002_create_transcripts.py  0003_add_transcript_duration.py  0004_add_diarization_fields.py  0005_create_sessions_and_notes.py  0006_add_audio_chunks.py
docs/: DATA_FLOW.md  SETUP.md
docs/web/: index.html
src/server/: config.py  main.py  settings.py
src/server/agents/: __init__.py  diarization_agent.py  llm_agent.py  notes_agent.py  sarvam_stt_agent.py  transcription_agent.py
src/server/api/: api.py
src/server/core/: celery_app.py
src/server/models/: __init__.py  audio.py  audio_chunk.py  chunk_transcript.py  database.py  session.py  session_note.py  transcript.py
src/server/services/: services.py  vector_store.py
src/server/tasks/: session_processing.py
src/web/: app.js  env.json  index.html  style.css
tests/: test_main.py
